# AgnoLab

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
apps/: Corridas setembro.xlsx
apps/api/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
apps/api/agnolab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: builtin_tools.py  compiler.py  email_listener.py  executor.py  exporter.py  flow_store.py  main.py  models.py  provider_catalog.py  queue_subscriber.py  runtime_dependencies.py  sample_graph.py  whatsapp_gateway.py
apps/web/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  MonacoToolEditor.tsx  agentConfig.ts  api.ts  nodeCatalog.ts  providerCatalog.ts  starterTools.ts  styles.css  teamConfig.ts  toolCatalog.ts  toolIcons.tsx  types.ts
docs/: architecture.md
examples/skills/support-response-style/: SKILL.md
infra/wppconnect/: Dockerfile  entrypoint.sh
